@@ -137,12 +137,7 @@ let f txt =
           Lexer.report_error Format.std_formatter err; l
       | Syntaxerr.Error err ->
           Syntaxerr.report_error Format.std_formatter err;
-          begin match err with
-            Syntaxerr.Unclosed(l,_,_,_) -> l
-          | Syntaxerr.Applicative_path l -> l
-          | Syntaxerr.Variable_in_scope(l,_) -> l
-          | Syntaxerr.Other l -> l
-          end
+          Syntaxerr.location_of_error err
       | Typecore.Error (l,err) ->
           Typecore.report_error Format.std_formatter err; l
       | Typeclass.Error (l,err) ->
