@@ -16,6 +16,7 @@ open Format
 
 type error =
     Unclosed of Location.t * string * Location.t * string
+  | Expecting of Location.t * string
   | Applicative_path of Location.t
   | Variable_in_scope of Location.t * string
   | Other of Location.t
@@ -24,3 +25,5 @@ exception Error of error
 exception Escape_error
 
 val report_error: formatter -> error -> unit
+
+val location_of_error: error -> Location.t
