@@ -29,6 +29,7 @@ Bug fixes:
 - PR#5763: ocamlbuild does not give correct flags when running menhir
 - PR#5784: -dclambda option is ignored
 - PR#5787: Bad behavior of 'Unused ...' warnings in the toplevel
+- PR#5770: Syntax error messages involving unclosed parens are sometimes incorrect
 
 Internals:
 - Moved debugger/envaux.ml to typing/envaux.ml to publish env_of_only_summary
